# ChangeLog for sys-block/nbd
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-block/nbd/ChangeLog,v 1.36 2008/05/01 09:32:06 dertobi123 Exp $

  01 May 2008; Tobias Scherbaum <dertobi123@gentoo.org> nbd-2.9.8.ebuild:
  ppc stable, bug #218491

  24 Apr 2008; Markus Rothe <corsair@gentoo.org> nbd-2.9.8.ebuild:
  Stable on ppc64; bug #218491

  23 Apr 2008; Markus Meier <maekke@gentoo.org> nbd-2.9.8.ebuild:
  amd64/x86 stable, bug #218491

*nbd-2.9.10 (19 Apr 2008)

  19 Apr 2008; Mike Frysinger <vapier@gentoo.org> +nbd-2.9.10.ebuild:
  Version bump.

*nbd-2.9.8 (27 Oct 2007)

  27 Oct 2007; Mike Frysinger <vapier@gentoo.org> +nbd-2.9.8.ebuild:
  Version bump.

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> nbd-2.9.2.ebuild:
  ppc. stable

  11 Jul 2007; Markus Rothe <corsair@gentoo.org> nbd-2.9.4.ebuild:
  Added ~ppc64; bug #184704

*nbd-2.9.4 (26 Jun 2007)

  26 Jun 2007; Mike Frysinger <vapier@gentoo.org> +nbd-2.9.4.ebuild:
  Version bump.

*nbd-2.9.3 (11 Jun 2007)

  11 Jun 2007; Mike Frysinger <vapier@gentoo.org> +nbd-2.9.3.ebuild:
  Version bump #180884 by Tom Lloyd.

  10 Apr 2007; Christian Faulhammer <opfer@gentoo.org> nbd-2.9.2.ebuild:
  revert to ~x86, see bug 173738

  08 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org> nbd-2.9.2.ebuild:
  revert the ppc stable keywording wrt #173738

  06 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org> nbd-2.9.2.ebuild:
  ppc stable, bug #169080

  17 Mar 2007; Steve Dibb <beandog@gentoo.org> nbd-2.9.2.ebuild:
  amd64 stable, bug 169080

  03 Mar 2007; Raúl Porcel <armin76@gentoo.org> nbd-2.9.2.ebuild:
  x86 stable wrt bug 169080

  03 Mar 2007; Mike Frysinger <vapier@gentoo.org>
  +files/nbd-2.9.2-no-page-header.patch, nbd-2.9.2.ebuild:
  Dont include asm/page.h #168952 by Peter Alfredsen.

  10 Feb 2007; Steve Dibb <beandog@gentoo.org> nbd-2.9.0.ebuild:
  amd64 stable, bug 159209

  03 Feb 2007; Matti Bickel <mabi@gentoo.org> nbd-2.9.0.ebuild: