@@ -1,6 +1,10 @@
 # ChangeLog for sys-block/nbd
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-block/nbd/ChangeLog,v 1.36 2008/05/01 09:32:06 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-block/nbd/ChangeLog,v 1.37 2008/05/05 03:23:29 vapier Exp $
+
+  05 May 2008; Mike Frysinger <vapier@gentoo.org>
+  nbd-2.9.8.ebuild, nbd-2.9.10.ebuild:
+  Force disable klibc building #220150 by cJ.
 
   01 May 2008; Tobias Scherbaum <dertobi123@gentoo.org> nbd-2.9.8.ebuild:
   ppc stable, bug #218491
